--- a/flaskblog/static/sass/about.scss
+++ b/flaskblog/static/sass/about.scss
@@ -1,4 +1,5 @@
 @import "./nav.scss";
+@import "./variable.scss";
 
 .carousel-item {
     img {
@@ -6,7 +7,7 @@
     }
     .carousel-caption {
         h3 {
-            color: #ce24ce;
+            color: $darken-blue;
             text-transform: uppercase;
         }
     }
@@ -14,7 +15,7 @@
 
 .about-us {
     h3 {
-        color: #ce24ce;
+        color: $darken-blue;
         text-transform: uppercase;
     }
 }
@@ -22,7 +23,7 @@
 @media (max-width: 800px) {
     .about-us {
             h3 {
-                color: #ce24ce;
+                color: $darken-blue;
                 font-size: 1.1rem !important;
                 text-transform: uppercase;
             }
@@ -33,7 +34,7 @@
         }
         .carousel-caption {
             h3 {
-                color: #ce24ce;
+                color: $darken-blue;
                 font-size: 1.2rem;
                 text-transform: uppercase;
             }
