--- a/flaskblog/static/sass/blog-post.scss
+++ b/flaskblog/static/sass/blog-post.scss
@@ -1,3 +1,5 @@
+@import "./variable.scss";
+
 .blog-posts {
     border-radius: 0.5rem;
     width: 95%;
@@ -35,6 +37,6 @@
 }
 
 .user-link {
-    color: #ce24ce !important;
+    color: $darken-blue !important;
     text-decoration: none;
 }
