--- a/flaskblog/static/sass/error.scss
+++ b/flaskblog/static/sass/error.scss
@@ -1,4 +1,5 @@
 @import "nav.scss";
+@import "variable.scss";
 
 body{
     height: 100vh;
@@ -6,11 +7,11 @@ body{
 }
 
 .error-content {
-    height: 50vh;
+    height: 40rem;
     width: 100vw;
     margin: 0;
     margin-top: 4.5rem;
-    background: #ce24ce;
+    background: $darken-blue;
     color: #eee;
     display: flex;
     justify-content: center;
@@ -31,8 +32,9 @@ body{
     }
 }
 
-@media (max-width: 750px) {
+@media (max-width: 768px) {
     .error-content {
+        height: 30rem;
         div {
             width: 75%;
         }
@@ -41,6 +43,7 @@ body{
 
 @media (max-width: 600px) {
     .error-content {
+        height: 20rem;
         div {
             width: 85%;
             .error-code {
