--- a/flaskblog/static/sass/post.scss
+++ b/flaskblog/static/sass/post.scss
@@ -1,4 +1,5 @@
 @import "./nav.scss";
+@import "variable.scss";
 
 .img-author {
     width: 3rem;
@@ -20,7 +21,7 @@
         text-transform: uppercase;
     }
     .post-title {
-        color: #ce24ce;
+        color: $darken-blue;
         font-size: 2rem;
         text-align: center;
         text-transform: uppercase;
@@ -33,7 +34,7 @@
             text-align: center;
             margin: 2rem auto;
             border-radius: 0.3rem;
-            border: 1px solid #ce24ce;
+            border: 1px solid $darken-blue;
     }
     .post-info {
         display: flex;
@@ -83,6 +84,9 @@
             width: 60%;
             margin: 2rem ;
             // display: block;
+        }
+        .btn-primary {
+            background: $dark-blue;
         }
     }
 }
