--- a/flaskblog/static/sass/register.scss
+++ b/flaskblog/static/sass/register.scss
@@ -1,31 +1,35 @@
+@import "./variable.scss";
+
 body {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     background: #f1f1f1;
-
 }
 
 .register-section {
     width: 50%;
+    margin-top: 10vh;
     padding: 2rem;
-    border: 2px solid #ce24ce;
+    border: 2px solid $darken-blue;
     border-radius: 0.6rem;
     legend {
         font-weight: bold;
-        color: #ce24ce;
+        color: $darken-blue;
         text-align: center;
     }
     .form-group {
         width: 85%;
         margin: 1rem auto;
         input {
-            border: 1px solid #ce24ce; 
+            &:focus {
+                border: 1px solid $darken-blue; 
+            }
         }
         .register-btn {
-            background: #ce24ce;
+            background: $darken-blue;
             color: white;
             border-radius: 0.3rem;
             display: block;
@@ -33,9 +37,9 @@ body {
         }
         p {
             a {
-                color: #ce24ce;
+                color: $darken-blue;
                 &:hover {
-                    color: #ce24ce;
+                    color: $darken-blue;
                 }
             }
         }
