--- a/flaskblog/templates/home.html
+++ b/flaskblog/templates/home.html
@@ -18,7 +18,7 @@
                 <a class="nav-link" href="{{ url_for('main.about') }}">ABOUT</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">CONTACT</a>
+                <a class="nav-link" href="#">SUBSCRIBE</a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true"
@@ -57,7 +57,7 @@
                 class="blog-img card-img-top" />
             <div class="card-body">
                 <p class="blog-category text-muted">{{ post.category }}</p>
-                <h3 class="card-title">{{ post.title }}</h3>
+                <h3 class="card-title mb-2">{{ post.title }}</h3>
                 <div class="d-flex justify-content-around align-items-center mb-2">
                     <img src="{{ post.author.image_file }}" alt="avatar"
                         class="user-img">
