--- a/flaskblog/templates/post.html
+++ b/flaskblog/templates/post.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block header%}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/post.scss.css') }}" />
+<link rel="stylesheet" href="https://kenzy-blog-files.s3.af-south-1.amazonaws.com/css/post.scss.css" />
 {% endblock header %}
 {% block content %}
 <nav class="navbar navbar-expand-md navbar-light bg-light d-flex justify-content-around fixed-top">
@@ -18,7 +18,7 @@
                 <a class="nav-link" href="{{ url_for('main.about') }}">ABOUT</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">CONTACT</a>
+                <a class="nav-link" href="#">SUBSCRIBE</a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true"
@@ -50,18 +50,18 @@
     <img src="{{ post.image_file }}" alt="post-img" class="post-img" />
     <div class="post-info">
         <div class="d-flex justify-content-around align-items-center">
-            <a href="{{ post.author.facebook_link }}">
+            <a href="{{ post.author.facebook_link }}" target="_blank">
                 <i class="fab fa-facebook-square"></i>
             </a>
-            <a href="{{ post.author.instagram_link }}">
+            <a href="{{ post.author.instagram_link }}" target="_blank">
                 <span class="instagram">
                     <span class="fab fa-instagram"></span>
                 </span>
             </a>
-            <a href="{{ post.author.twitter_link }}">
+            <a href="{{ post.author.twitter_link }}" target="_blank">
                 <i class="fab fa-twitter-square"></i>
             </a>
-            <a href="{{ post.author.linkedin_link}}">
+            <a href="{{ post.author.linkedin_link}}" target="_blank">
                 <i class="fab fa-linkedin"></i>
             </a>
         </div>
@@ -71,15 +71,16 @@
             <span class="mt-3">
                 <img src="{{ post.author.image_file }}" alt="avatar"
                     class="img-author mr-2">
-                {{post.author.fullname}}
+                <a href="{{ url_for('users.get_user', username=post.author.username) }}"
+                    class="text-muted">{{post.author.fullname}}</a>
             </span>
         </div>
     </div>
-    <div class="post-body">
+    <p class="post-body">
         {{ post.content }}
-    </div>
+    </p>
     {% if post.author == current_user %}
-    <div class="form-group">
+    <div class="form-group mt-3">
         <a href="{{ url_for('posts.update_post', id=post.id) }}" class="btn btn-primary">UPDATE</a>
         <!-- Button trigger modal -->
         <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#deleteModal">
@@ -90,19 +91,19 @@
             aria-hidden="true">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
-                    <div class="modal-header bg-danger text-white">
-                        <h5 class="modal-title">Delete Post?</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
+                    <div class="modal-header">
+                        <h5 class="modal-title">Do you want to delete this post?</h5>
                     </div>
-                    <div class="modal-body text-danger">
+                    <div class="modal-body">
                         Deleting this post means you will lose all its content
-                        and this action is irreversible
+                        and this action is irreversible, are you sure what you'll do now? 
                     </div>
                     <div class="modal-footer">
-                        <form action="{{ url_for('posts.delete_post', id=post.id) }}" method="post" class="p-0">
-                            <input type="submit" class="btn btn-danger" value="DELETE" />
+                        <form action="{{ url_for('posts.delete_post', id=post.id) }}" method="post" class=" d-flex align-items-center p-0">
+                            <button type="button" class="btn px-4 mr-2" data-dismiss="modal" aria-label="Close">
+                                Cancel
+                            </button>
+                            <input type="submit" class="btn btn-danger px-4" value="Delete" />
                         </form>
                     </div>
                 </div>
