--- a/flaskblog/templates/register.html
+++ b/flaskblog/templates/register.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block header%}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/register.scss.css') }}" />
+<link rel="stylesheet" href="https://kenzy-blog-files.s3.af-south-1.amazonaws.com/css/post.scss.css" />
 {% endblock header %}
 {% block content %}
 <div class="register-section">
@@ -77,7 +77,7 @@
             <div class="valid-feedback">Looks good</div>
             {% endif %}
         </div>
-        <div class="form-group mt-4">
+        <div class="form-group mt-5">
             {{ form.submit(class="btn register-btn")}}
         </div>
         <div class="form-group">
