--- a/flaskblog/templates/reset-request.html
+++ b/flaskblog/templates/reset-request.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block header%}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/login.scss.css') }}" />
+<link rel="stylesheet" href="https://kenzy-blog-files.s3.af-south-1.amazonaws.com/css/login.scss.css" />
 {% endblock header %}
 {% block content %}
 <div class="register-section">
