--- a/flaskblog/static/sass/home.scss
+++ b/flaskblog/static/sass/home.scss
@@ -72,7 +72,7 @@
     .card {
         width: 100%;
         .card-title {
-            color: #ce24ce;
+            color: $darken-blue;
             text-transform: uppercase;
             margin-bottom: 0.2rem;
             font-size: 1.1rem;
