--- a/flaskblog/static/sass/variable.scss
+++ b/flaskblog/static/sass/variable.scss
@@ -1,3 +1,7 @@
 $darken-blue : #005691;
 $dark-blue : #0047AC;
-$grey: #8f8f8f
+$grey: #8f8f8f;
+
+body {
+    font-family: 'Roboto', sans-serif !important;
+}
