--- a/flaskblog/static/sass/error.scss
+++ b/flaskblog/static/sass/error.scss
@@ -10,7 +10,8 @@ body{
     height: 40rem;
     width: 100vw;
     margin: 0;
-    margin-top: 4.5rem;
+    margin-top: 2rem;
+    padding-top: 1rem;
     background: $darken-blue;
     color: #eee;
     display: flex;
