--- a/flaskblog/templates/register.html
+++ b/flaskblog/templates/register.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block header%}
-<link rel="stylesheet" href="https://kenzy-blog-files.s3.af-south-1.amazonaws.com/css/post.scss.css" />
+<link rel="stylesheet" href="https://kenzy-blog-files.s3.af-south-1.amazonaws.com/css/register.scss.css" />
 {% endblock header %}
 {% block content %}
 <div class="register-section">
