feat: Final Commit

--- a/flaskblog/templates/about.html
+++ b/flaskblog/templates/about.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block header%}
-<link rel="stylesheet" href="https://kenzy-blog-files.s3.af-south-1.amazonaws.com/css/about.scss.css" />
+<link rel="stylesheet" href="https://kenzy-blog-files.s3.af-south-1.amazonaws.com/css/about.scss.css"/>
 {% endblock header %}
 {% block content %}
 <nav class="navbar navbar-expand-md navbar-light bg-light d-flex justify-content-around fixed-top">
@@ -55,28 +55,24 @@
         <div class="carousel-item active">
             <img src="https://kenzy-blog-files.s3.af-south-1.amazonaws.com/power-station.jpg" alt="First slide" class="d-block w-100" />
             <div class="carousel-caption d-md-block">
-                <h3>Trending and Popular</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam quis modi eveniet facilis, quae
-                    neque. Officia tempore mollitia laborum obcaecati, aut laudantium provident assumenda veniam
-                    repellat tenetur veritatis commodi autem.</p>
+                <h3>Rank Tracking</h3>
+                <p>Track performance of hundreds (or thousands) of your traffic-driving keywords across 200+ search engines</p>
             </div>
         </div>
         <div class="carousel-item">
             <img src="https://kenzy-blog-files.s3.af-south-1.amazonaws.com/background.jpg" alt="Second slide" class="d-block w-100" />
             <div class="carousel-caption d-md-block">
-                <h3> Lastest Blog</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero aut voluptatum eligendi, debitis,
-                    consectetur ullam ratione, praesentium reiciendis delectus tempore facilis. Mollitia perspiciatis
-                    cumque earum voluptatem. Vero doloremque quam assumenda!</p>
+                <h3>Site Audits</h3>
+                <p>We crawl your site on demand, uncover technical SEO issues and recommend improvements and fixes</p>
             </div>
         </div>
         <div class="carousel-item">
             <img src="https://kenzy-blog-files.s3.af-south-1.amazonaws.com/new-york.jpg" alt="Third slide" class="d-block w-100" />
             <div class="carousel-caption d-md-block">
-                <h3>Informative</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam delectus ab quisquam culpa.
-                    Reiciendis nesciunt, pariatur quas nam, eius voluptas quos tempora quaerat optio impedit vel
-                    laboriosam quam adipisci nihil.</p>
+                <h3>Keyword Research</h3>
+                <p>Discover thosusands of keywords to target along with Keyword Difficulty scores competitor research, and
+                    SERP analysis
+                </p>
             </div>
         </div>
     </div>
@@ -113,7 +109,8 @@
     </p>
     <p class="mb-4">
         If you are not a programmer, I have an advice for you - learn programming because learning it sharpens your
-        reasoning skills. It doesn't matter who you are and what you do, you can learn it as an hobby
+        reasoning skills. It doesn't matter who you are and what you do, you can learn it as an hobby.
+        Thank you so much for your time.
     </p>
 </section>
 {% endblock content %}
